--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,16 +1,9 @@
 .about-cotainer{
-    margin: 0;
+    margin: 10px;
     padding: 10px;
 }
-.about-heading{
-    text-align: center;
-}
-.about-heading a{
-    text-decoration: none;
-    color: #0a0e3d;
-    font-size: 40px;
-    font-weight: 700;
-    font-family: inherit;
+
+.heading a{
     transition: .5s;
     opacity: 0;
     animation:slideLeft 1s ease forwards ;
@@ -41,7 +34,6 @@
     opacity: 0;
     animation: slideRight 1s ease forwards;
     animation-delay: .5s;
-    
     margin:25px;
 
 }
@@ -53,12 +45,13 @@
     border: 1px solid rgb(207, 203, 203);
     border-radius: 5px;
     box-shadow: 0 15px 10px 0px rgba(50,50,93,.1);   
-    
+    opacity: 0;
+    animation: slideLeft 1s ease forwards;
+    animation-delay: .5s;
 }
 .about-image .computer{
     position: relative;
     width: 300px;
-    
     margin-left: 150px;
     height: 90%;
     animation-name : mymove;
